--- a/themes/myTheme/layouts/_default/terms.html
+++ b/themes/myTheme/layouts/_default/terms.html
@@ -2,7 +2,7 @@
     <div class="container">
         <h1>すべてのタグ</h1>
         <ul class="terms">
-            {{ range $index, $term := .Site.Taxonomies.tags.ByCount }}
+            {{ range $index, $term := .Site.Taxonomies.tag.ByCount }}
                 <a href="{{ .Page.RelPermalink }}">
                     <div class="tagicon-container">
                         <li class="{{ .Name }}">{{ .Page.Title }}</li>
