--- a/assets/sass/single.scss
+++ b/assets/sass/single.scss
@@ -131,7 +131,7 @@ $categories: ();
                 }
             }
 
-            .thanks-repo-button {
+            .repo-container {
                 display: flex;
                 align-items: end;
                 font-size: 14px;
@@ -298,7 +298,7 @@ $categories: ();
                     }
                 }
 
-                .thanks-repo-button {
+                .repo-container {
                     .repository {
                         font-size: 12px;
                         padding: 6px 8px;
