--- a/themes/myTheme/layouts/_default/single.html
+++ b/themes/myTheme/layouts/_default/single.html
@@ -1,4 +1,4 @@
-{{/*  Template for article pages  */}}
+{{/*  Template for article pages (including category top page)  */}}
 
 {{ define "main" }}
 
