--- a/themes/myTheme/layouts/_default/list.html
+++ b/themes/myTheme/layouts/_default/list.html
@@ -1,16 +1,22 @@
+{{/*  Template for list page (excluding category top page)  */}}
+
 {{ define "main" }}
+
+    {{/*  Fetch hierarchy of current page  */}}
+
     {{ $hierarchy := partial "function/fetchHierarchy" . }}
 
     <div class="navTree-article-container">
 
-        {{/*  Navigation Tree  */}}
+        {{/*  Navigation tree  */}}
+
         {{ partial "navTree.html" . }}
         
         <div class="article-container">
             <h1 class="title">{{ .Title }}</h1>
             <p class="description">{{ .Description }}</p>
 
-            <ul class="list-index">
+            <ul class="index">
                 {{ range .RegularPages }}
                     <a href="{{ .RelPermalink }}"><li>{{ .Title }}</li></a>
                 {{ end }}
