Change class name

--- a/assets/sass/single.scss
+++ b/assets/sass/single.scss
@@ -252,7 +252,7 @@ $categories: ();
         }
 
         // for non-first section page
-        ul.list-index {
+        ul.index {
             margin: 30px 0;
 
             li {
