--- a/themes/myTheme/layouts/_default/_markup/render-heading.html
+++ b/themes/myTheme/layouts/_default/_markup/render-heading.html
@@ -1,3 +1,10 @@
+{{/*  
+    Markdown heading renderer
+    # -> <h2>
+    ## -> <h3>
+    ### -> <h4>
+*/}}
+
 <h{{ add .Level 1 }} id="{{ .Anchor | safeURL }}">
     {{ if eq .Level 1}}
         <a href="#{{ .Anchor | safeURL }}">
