--- a/themes/myTheme/layouts/_default/_markup/render-link.html
+++ b/themes/myTheme/layouts/_default/_markup/render-link.html
@@ -1,3 +1,8 @@
+{{/*  
+    Markdown link renderer
+    If the URL starts with "http", open it in new tab
+*/}}
+
 <a href="{{ .Destination | safeURL }}"
     {{ if strings.HasPrefix .Destination "http" }}
         target="_blank" rel="noopener noreferrer"
