--- a/assets/sass/404.scss
+++ b/assets/sass/404.scss
@@ -1,54 +1,52 @@
-h1 {
+.container {
+    h1 {
         text-align: center;
-        font-size: 26px;
-        padding: 20px 0;
-}
+        font-size: 34px;
+    }
 
-p {
+    p {
         text-align: center;
-        font-size: 18px;
+        font-size: 16px;
         padding: 14px 0;
-}
+    }
 
-.wheel-and-hamster {
-        margin: 20vh auto;
-        --dur: 1s;
+    .wheel-and-hamster {
+        margin: 40px auto;
+        --dur: 0.7s;
+        --openstudy-dur: 20s;
         position: relative;
-        width: 12em;
-        height: 12em;
+        width: 540px;
+        height: 540px;
         font-size: 14px;
-    }
-    
-    .wheel,
-    .hamster,
-    .hamster div,
-    .spoke {
-        position: absolute;
-    }
-    
-    .wheel,
-    .spoke {
-        border-radius: 50%;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
-    
-    .wheel {
-        background: radial-gradient(100% 100% at center,hsla(0,0%,60%,0) 47.8%,hsl(0,0%,60%) 48%);
-        z-index: 2;
-    }
-    
-    .hamster {
-        animation: hamster var(--dur) ease-in-out infinite;
-        top: 50%;
-        left: calc(50% - 3.5em);
-        width: 7em;
-        height: 3.75em;
-        transform: rotate(4deg) translate(-0.8em,1.85em);
-        transform-origin: 50% 0;
-        z-index: 1;
+
+        svg {
+            border-radius: 50%;
+            animation: svg var(--openstudy-dur) linear infinite;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            stroke: #fff;
+            stroke-width: 6px;
+            fill: none;
+            filter: drop-shadow(0 0 8px hsl(30, 100%, 70%));
+        }
+        
+        .hamster {
+            position: absolute;
+            animation: hamster var(--dur) ease-in-out infinite;
+            top: 52%;
+            left: calc(50% - 3.5em);
+            width: 7em;
+            height: 3.75em;
+            transform: rotate(4deg) translate(-0.8em,1.85em);
+            transform-origin: 50% 0;
+            z-index: 1;
+
+            div {
+                position: absolute;
+            }
+        }
     }
     
     .hamster__head {
@@ -166,120 +164,143 @@ p {
         transform: rotate(30deg) translateZ(-1px);
         transform-origin: 0.25em 0.25em;
     }
-    
-    .spoke {
-        animation: spoke var(--dur) linear infinite;
-        background: radial-gradient(100% 100% at center,hsl(0,0%,60%) 4.8%,hsla(0,0%,60%,0) 5%),
-                    linear-gradient(hsla(0,0%,55%,0) 46.9%,hsl(0,0%,65%) 47% 52.9%,hsla(0,0%,65%,0) 53%) 50% 50% / 99% 99% no-repeat;
-    }
-    
-    /* Animations */
-    @keyframes hamster {
-        from, to {
-            transform: rotate(4deg) translate(-0.8em,1.85em);
-        }
-    
-        50% {
-            transform: rotate(0) translate(-0.8em,1.85em);
+}
+
+
+
+@media screen and (max-width: 999px) {
+    .container {
+        .wheel-and-hamster {
+            width: 420px;
+            height: 420px;
+
+            .hamster {
+                display: none;
+            }
         }
     }
-    
-    @keyframes hamsterHead {
-        from, 25%, 50%, 75%, to {
-            transform: rotate(0);
-        }
-    
-        12.5%, 37.5%, 62.5%, 87.5% {
-            transform: rotate(8deg);
-        }
-    }
-    
-    @keyframes hamsterEye {
-        from, 90%, to {
-            transform: scaleY(1);
-        }
-    
-        95% {
-            transform: scaleY(0);
+}
+
+
+
+@media screen and (max-width: 699px) {
+    .container {
+        .wheel-and-hamster {
+            width: 260px;
+            height: 260px;
         }
     }
-    
-    @keyframes hamsterEar {
-        from, 25%, 50%, 75%, to {
-            transform: rotate(0);
-        }
-    
-        12.5%, 37.5%, 62.5%, 87.5% {
-            transform: rotate(12deg);
-        }
+}
+
+
+
+
+@keyframes hamster {
+    from, to {
+        transform: rotate(4deg) translate(-0.8em,1.85em);
     }
-    
-    @keyframes hamsterBody {
-        from, 25%, 50%, 75%, to {
-            transform: rotate(0);
-        }
-    
-        12.5%, 37.5%, 62.5%, 87.5% {
-            transform: rotate(-2deg);
-        }
+
+    50% {
+        transform: rotate(0) translate(-0.8em,1.85em);
     }
-    
-    @keyframes hamsterFRLimb {
-        from, 25%, 50%, 75%, to {
-            transform: rotate(50deg) translateZ(-1px);
-        }
-    
-        12.5%, 37.5%, 62.5%, 87.5% {
-            transform: rotate(-30deg) translateZ(-1px);
-        }
+}
+
+@keyframes hamsterHead {
+    from, 25%, 50%, 75%, to {
+        transform: rotate(0);
     }
-    
-    @keyframes hamsterFLLimb {
-        from, 25%, 50%, 75%, to {
-            transform: rotate(-30deg);
-        }
-    
-        12.5%, 37.5%, 62.5%, 87.5% {
-            transform: rotate(50deg);
-        }
+
+    12.5%, 37.5%, 62.5%, 87.5% {
+        transform: rotate(8deg);
     }
-    
-    @keyframes hamsterBRLimb {
-        from, 25%, 50%, 75%, to {
-            transform: rotate(-60deg) translateZ(-1px);
-        }
-    
-        12.5%, 37.5%, 62.5%, 87.5% {
-            transform: rotate(20deg) translateZ(-1px);
-        }
+}
+
+@keyframes hamsterEye {
+    from, 90%, to {
+        transform: scaleY(1);
     }
-    
-    @keyframes hamsterBLLimb {
-        from, 25%, 50%, 75%, to {
-            transform: rotate(20deg);
-        }
-    
-        12.5%, 37.5%, 62.5%, 87.5% {
-            transform: rotate(-60deg);
-        }
+
+    95% {
+        transform: scaleY(0);
     }
-    
-    @keyframes hamsterTail {
-        from, 25%, 50%, 75%, to {
-            transform: rotate(30deg) translateZ(-1px);
-        }
-    
-        12.5%, 37.5%, 62.5%, 87.5% {
-            transform: rotate(10deg) translateZ(-1px);
-        }
+}
+
+@keyframes hamsterEar {
+    from, 25%, 50%, 75%, to {
+        transform: rotate(0);
     }
-    
-    @keyframes spoke {
-        from {
-            transform: rotate(1);
-        }
-    
-        to {
-            transform: rotate(-1turn);
-        }
+
+    12.5%, 37.5%, 62.5%, 87.5% {
+        transform: rotate(12deg);
     }
+}
+
+@keyframes hamsterBody {
+    from, 25%, 50%, 75%, to {
+        transform: rotate(0);
+    }
+
+    12.5%, 37.5%, 62.5%, 87.5% {
+        transform: rotate(-2deg);
+    }
+}
+
+@keyframes hamsterFRLimb {
+    from, 25%, 50%, 75%, to {
+        transform: rotate(50deg) translateZ(-1px);
+    }
+
+    12.5%, 37.5%, 62.5%, 87.5% {
+        transform: rotate(-30deg) translateZ(-1px);
+    }
+}
+
+@keyframes hamsterFLLimb {
+    from, 25%, 50%, 75%, to {
+        transform: rotate(-30deg);
+    }
+
+    12.5%, 37.5%, 62.5%, 87.5% {
+        transform: rotate(50deg);
+    }
+}
+
+@keyframes hamsterBRLimb {
+    from, 25%, 50%, 75%, to {
+        transform: rotate(-60deg) translateZ(-1px);
+    }
+
+    12.5%, 37.5%, 62.5%, 87.5% {
+        transform: rotate(20deg) translateZ(-1px);
+    }
+}
+
+@keyframes hamsterBLLimb {
+    from, 25%, 50%, 75%, to {
+        transform: rotate(20deg);
+    }
+
+    12.5%, 37.5%, 62.5%, 87.5% {
+        transform: rotate(-60deg);
+    }
+}
+
+@keyframes hamsterTail {
+    from, 25%, 50%, 75%, to {
+        transform: rotate(30deg) translateZ(-1px);
+    }
+
+    12.5%, 37.5%, 62.5%, 87.5% {
+        transform: rotate(10deg) translateZ(-1px);
+    }
+}
+
+@keyframes svg {
+    from {
+        transform: rotate(1);
+    }
+
+    to {
+        transform: rotate(-60deg);
+    }
+}
