--- a/themes/myTheme/layouts/404.html
+++ b/themes/myTheme/layouts/404.html
@@ -1,27 +1,30 @@
+{{/*  
+Powered by uiversw.io@Nawsome
+https://uiverse.io/Nawsome/wet-mayfly-23  
+*/}}
+
 {{ define "main" }}
-<h1>404 NOT FOUND...</h1>
+    <div class="container">
+        <h1>404 Not Found</h1>
 
-<!-- 
-    Powered by uiversw.io@Nawsome
-    https://uiverse.io/Nawsome/wet-mayfly-23 
--->
-
-<div aria-label="Orange and tan hamster running in a metal wheel" role="img" class="wheel-and-hamster">
-    <div class="wheel"></div>
-    <div class="hamster">
-        <div class="hamster__body">
-            <div class="hamster__head">
-                <div class="hamster__ear"></div>
-                <div class="hamster__eye"></div>
-                <div class="hamster__nose"></div>
+        <div aria-label="Orange and tan hamster running in a metal wheel" role="img" class="wheel-and-hamster">
+            <div class="hamster">
+                <div class="hamster__body">
+                    <div class="hamster__head">
+                        <div class="hamster__ear"></div>
+                        <div class="hamster__eye"></div>
+                        <div class="hamster__nose"></div>
+                    </div>
+                    <div class="hamster__limb hamster__limb--fr"></div>
+                    <div class="hamster__limb hamster__limb--fl"></div>
+                    <div class="hamster__limb hamster__limb--br"></div>
+                    <div class="hamster__limb hamster__limb--bl"></div>
+                    <div class="hamster__tail"></div>
+                </div>
             </div>
-            <div class="hamster__limb hamster__limb--fr"></div>
-            <div class="hamster__limb hamster__limb--fl"></div>
-            <div class="hamster__limb hamster__limb--br"></div>
-            <div class="hamster__limb hamster__limb--bl"></div>
-            <div class="hamster__tail"></div>
+            {{ .Site.Data.openstudy_logo.svg | safeHTML }}
         </div>
+
+        <p>リンク切れであれば教えていただけると助かります！</p>
     </div>
-    <!-- <div class="spoke"></div> -->
-</div>
 {{ end }}
