--- a/themes/myTheme/layouts/partials/navTree.html
+++ b/themes/myTheme/layouts/partials/navTree.html
@@ -1,23 +1,22 @@
-{{/*  Fetch depth of current page  */}}
+{{/*  Fetch hierarchy of current page  */}}
+
 {{ $hierarchy := partial "function/fetchHierarchy" . }}
 
-{{/*  Navigation Tree  */}}
-<nav class="navTree {{ (index $hierarchy 1).Params.Color }} ">
-
+<nav class="navTree">
     <div class="category-link-container">
-        {{/*  Link to the top level category of current page  */}}
         <a href="{{ (index $hierarchy 1).RelPermalink }}">
             <h3>{{ (index $hierarchy 1).Title }}</h3>
         </a>
 
-        {{/*  navTree button  */}}
+        {{/*  for sp menu  */}}
+
         <label for="navTree-checkbox">
             <div class="navTree-button"></div>
         </label>
     </div>
-
     <input type="checkbox" id="navTree-checkbox">
 
-    {{/*  <ul> navigation tree comes here  */}}
+    {{/*  navigation tree comes here  */}}
+    
     {{ template "treeGenerator" (dict "section" (index $hierarchy 1) "current" .) }}
 </nav>
