--- a/themes/myTheme/layouts/shortcodes/accordion.html
+++ b/themes/myTheme/layouts/shortcodes/accordion.html
@@ -1,4 +1,7 @@
 {{ $title := .Get "title" }}
+
+{{/*  Generate random id  */}}
+
 {{ $salt := delimit (shuffle (split "0123456789abcdef" "" )) "" }}
 {{ $checksum := print .Inner $salt | md5 }}
 
