--- a/assets/sass/top.scss
+++ b/assets/sass/top.scss
@@ -1,5 +1,4 @@
 .wrapper {
-    // background: linear-gradient(to bottom, #fff, hsl(200, 10%, 90%));
     background-image: conic-gradient(from 90deg at -10% 100%, #fff 0deg, hsl(200, 50%, 80%) 90deg, #fff 1turn);
 
     &.top {
@@ -7,11 +6,10 @@
 
         .container {
             position: relative;
-            height: 540px;
             display: flex;
             justify-content: center;
             align-items: center;
-            overflow: hidden;
+            height: 540px;
 
             svg {
                 display: block;
@@ -80,47 +78,39 @@
         padding: 80px 20px;
 
         h2 {
-            font-size: 34px;
             text-align: center;
+            font-size: 34px;
             margin: 36px 0;
         }
 
         h3 {
             font-size: 24px;
-            padding: 10px 0;
-            margin: 30px 0 0;
+            margin: 50px 0 10px;
         }
 
         h4 {
             font-size: 18px;
-            margin: 20px 0 10px;
+            margin: 30px 0 10px;
+        }
+
+        p {
+            font-size: 16px;
+            margin: 20px 0;
         }
 
         ul {
             width: fit-content;
             margin: 0 auto;
+            padding-left: 20px;
 
             li {
-                padding: 4px 0;
                 font-size: 20px;
+                margin: 6px 0;
 
                 strong {
                     background: linear-gradient(transparent 80%, #b3b3b3 80%);
                 }
             }
-        }
-
-        p {
-            padding: 20px 0;
-            font-size: 16px;
-        }
-
-        a.contribute {
-            display: block;
-            width: fit-content;
-            margin: 0 auto;
-            font-weight: 800;
-            color: #0066cc;
         }
 
         .person-text-container {
@@ -204,6 +194,14 @@
             border-radius: 16px;
             background-color: #fff;
         }
+
+        a.contribute {
+            display: block;
+            width: fit-content;
+            margin: 0 auto;
+            font-weight: 800;
+            color: #0066cc;
+        }
     }
 }
 
@@ -244,6 +242,26 @@
                 }
             }
         }
+
+        .container {
+            h2 {
+                font-size: 28px;
+            }
+
+            ul {
+                li {
+                    font-size: 18px;
+                }
+            }
+
+            .person-text-container {
+                .person-text {
+                    i {
+                        font-size: 44px;
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -269,6 +287,22 @@
                 a.category-item {
                     width: calc(100% / 4);
                     padding: 12px 0;
+                }
+            }
+        }
+
+        .container {
+            .openstudy-github {
+                svg {
+                    width: 78px;
+                }
+
+                i.fa-xmark {
+                    width: 40px;
+                }
+
+                i.fa-github {
+                    font-size: 70px;
                 }
             }
         }
