Add `.Site.BaseURL` for debugging

--- a/themes/myTheme/layouts/index.html
+++ b/themes/myTheme/layouts/index.html
@@ -35,6 +35,8 @@
         </div>
     </div>
 
+    {{ .Site.BaseURL }}
+
     <div class="wrapper">
         <div class="container">
             <h2><span>技術ブログや</span><span>Qiita、</span><span>Zennなどの場合</span></h2>
