Add sample link

--- a/themes/myTheme/layouts/index.html
+++ b/themes/myTheme/layouts/index.html
@@ -36,6 +36,7 @@
     </div>
 
     {{ .Site.BaseURL }}
+    <a href="/">sample link</a>
 
     <div class="wrapper">
         <div class="container">
