--- a/themes/myTheme/layouts/partials/head.html
+++ b/themes/myTheme/layouts/partials/head.html
@@ -14,7 +14,7 @@
     <meta name="description" content="{{ .Description }}">
     <meta name="format-detection" content="telephone=no">
 
-    <link rel="icon" href="/favicon/favicon96.ico" size="96x96">
+    <link rel="icon" href="{{ .Site.BaseURL }}favicon/favicon96.ico" size="96x96">
     <link rel="apple-touch-icon" href="images/oapple-touch-icon180.png">
 
 
@@ -24,7 +24,7 @@
     <meta property="og:title" content="{{ .Title }}" />
     <meta property="og:description" content="{{ .Description }}" />
     <meta property="og:site_name" content="{{ .Site.Title }}" />
-    <meta property="og:image" content="/images/OpenStudy.png" />
+    <meta property="og:image" content="{{ .Site.BaseURL }}images/OpenStudy.png" />
     <meta property="og:locale" content="ja_JP" />
 
 
