--- a/themes/myTheme/layouts/partials/footer.html
+++ b/themes/myTheme/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<script src="/js/sideMenu.js"></script>
+<script src="{{ .Site.BaseURL }}js/sideMenu.js"></script>
 
 <footer>
     <div class="container">
