--- a/themes/myTheme/layouts/partials/header.html
+++ b/themes/myTheme/layouts/partials/header.html
@@ -19,7 +19,7 @@
     </div>
     
     <ul>
-        <a href="/contribute/"><li>Contribute</li></a>
+        <a href="{{ .Site.BaseURL }}contribute/"><li>Contribute</li></a>
         <a href="https://github.com/lin-24-ia/OpenStudy" target="_blank" rel="noopener noreferrer">
             <i class="fa-brands fa-github"></i>
         </a>
