--- a/assets/sass/single.scss
+++ b/assets/sass/single.scss
@@ -280,7 +280,7 @@ $categories: ();
 
             h1.title {
                 font-size: 28px;
-                padding: 8px 0;
+                margin: 20px 0;
             }
 
             p.description {
