Add Google analytics partial code

--- a/themes/myTheme/layouts/partials/head.html
+++ b/themes/myTheme/layouts/partials/head.html
@@ -119,6 +119,9 @@
         <link rel="stylesheet" href="{{ $style.Permalink }}">
     {{ end }}
 
+
+    <!-- Google Analytics -->
+    {{ partial "analytics" . }}
     
     <!-- Google Search Console -->
     <meta name="google-site-verification" content="rYJHGR_uUcxmqkD9mSn79HxxWq4ikIz755zQGjaf87A" />
