--- a/themes/myTheme/layouts/index.html
+++ b/themes/myTheme/layouts/index.html
@@ -35,8 +35,6 @@
         </div>
     </div>
 
-    <a href="{{ .RelPermalink }}">hello</a>
-
     <div class="wrapper">
         <div class="container">
             <h2><span>技術ブログや</span><span>Qiita、</span><span>Zennなどの場合</span></h2>
@@ -126,7 +124,8 @@ OpenStudyでは、HTMLにレンダリングされるとそれぞれが に対応
 
 ## 番号なしリスト
 
-ハイフン`-`、プラス`+`、アスタリスク`*`のいずれかを先頭に記述します。スペース4つでネストできます。</code></pre>
+ハイフン`-`、プラス`+`、アスタリスク`*`のいずれかを先頭に記述します。スペース4つでネストできます。
+...</code></pre>
         <i class="fa-solid fa-arrow-down"></i>
         <h4>HTML</h4>
         <iframe src="{{ .Site.BaseURL }}contribute/markdown-cheetsheet/"></iframe>
