--- a/assets/sass/single.scss
+++ b/assets/sass/single.scss
@@ -27,6 +27,7 @@ $categories: ();
                 margin: 0 auto;
                 width: 100%;
                 max-height: 200px;
+                object-fit: contain;
             }
         }
 
