Add new tab icon

--- a/themes/myTheme/layouts/_default/_markup/render-link.html
+++ b/themes/myTheme/layouts/_default/_markup/render-link.html
@@ -7,5 +7,10 @@
     {{ if strings.HasPrefix .Destination "http" }}
         target="_blank" rel="noopener noreferrer"
     {{ end }}>
-        {{ .Text | safeHTML }}
+
+    {{ .Text | safeHTML }}
+
+    {{ if strings.HasPrefix .Destination "http" }}
+        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+    {{ end }}
 </a>
